--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             xhr.open('POST', apiUrl, true);
             
             xhr.onload = function () {
+                alert("1");
                 xhr.setResponseHeader("Access-Control-Allow-Origin", "https://esprine.github.io");
                 
                 if (xhr.status === 200) {
